--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    dataBinding{
-        enabled = true
+    buildFeatures{
+        dataBinding = true
     }
+
 }
 
 dependencies {
