--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String","API_KEY","\"fe5fe68b133bc800529ee2eb303ec271\""
+        buildConfigField "String","BASE_URL","\"fe5fe68b133bc800529ee2eb303ec271\""
     }
 
     buildTypes {
@@ -42,7 +43,7 @@ dependencies {
     def lifecycle_version = "2.3.1"
     def arch_version = "2.1.0"
     def coroutines_version = "1.4.2"
-    def dagger_version = "2.28.1"
+    def dagger_version = "2.41"
     def retrofit_version = "2.9.0"
     def Interceptor_version = "4.7.2"
     def Glide_version = "4.11.0"
@@ -73,6 +74,9 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     //dagger
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     //retrofit
